--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,3 +33,10 @@ body {
   font-weight: 800;
   font-style: normal;
 }
+
+.protest-guerrilla-regular {
+  font-family: "Protest Guerrilla", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
