--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,3 +73,13 @@ body {
   font-style: normal;
 }
 
+.loader {
+  width: 25px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  border: 4px solid;
+  border-color: var(--background) #0000;
+  animation: l1 1s infinite;
+}
+@keyframes l1 {to{transform: rotate(.5turn)}}
+
