--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,7 +80,7 @@ body {
   aspect-ratio: 1;
   border-radius: 50%;
   border: 4px solid;
-  border-color: var(--background) #0000;
+  border-color: var(--background) var(--foreground);
   animation: l1 1s infinite;
 }
 @keyframes l1 {to{transform: rotate(.5turn)}}
